@@ -17,8 +17,8 @@
 package org.apache.solr.response;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import org.apache.solr.SolrTestCase;
@@ -31,7 +31,7 @@ import org.junit.Test;
 public class TestSolrQueryResponse extends SolrTestCase {
 
   @Test
-  public void testName() throws Exception {
+  public void testName() {
     assertEquals("SolrQueryResponse.NAME value changed", "response", SolrQueryResponse.NAME);
   }
 
@@ -77,7 +77,7 @@ public class TestSolrQueryResponse extends SolrTestCase {
   }
 
   @Test
-  public void testResponse() throws Exception {
+  public void testResponse() {
     final SolrQueryResponse response = new SolrQueryResponse();
     assertEquals("response initial value", null, response.getResponse());
     final Object newValue =
@@ -251,23 +251,22 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertFalse(it.hasNext());
     response.addHttpHeader("key1", "value1");
     assertTrue(response.httpHeaders().hasNext());
-    assertEquals(Arrays.asList("value1"), response.removeHttpHeaders("key1"));
+    assertEquals(List.of("value1"), List.copyOf(response.removeHttpHeaders("key1")));
     assertFalse(response.httpHeaders().hasNext());
 
     response.addHttpHeader("key1", "value2");
     response.addHttpHeader("key1", "value3");
     response.addHttpHeader("key2", "value4");
     assertTrue(response.httpHeaders().hasNext());
-    assertEquals(
-        Arrays.asList(new String[] {"value2", "value3"}), response.removeHttpHeaders("key1"));
+    assertEquals(List.of("value2", "value3"), List.copyOf(response.removeHttpHeaders("key1")));
     assertNull(response.removeHttpHeaders("key1"));
     assertEquals("key2", response.httpHeaders().next().getKey());
   }
 
   @Test
-  public void testException() throws Exception {
+  public void testException() {
     final SolrQueryResponse response = new SolrQueryResponse();
-    assertEquals("exception initial value", null, response.getException());
+    assertNull("exception initial value", response.getException());
     final Exception newValue =
         (random().nextBoolean()
             ? (random().nextBoolean() ? new ArithmeticException() : new IOException())
